# projekt-rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/common/: arguments.rs  messages.rs  mod.rs  multiplayer_pong.rs  player_state.rs
src/communication/: messages.rs
src/game/: ball.rs  configuration.rs  mod.rs  paddle.rs  paddle_like.rs  pong.rs  state.rs
