[package]
name = "projekt"
version = "0.1.0"
edition = "2021"

authors = ["Marcin Giembicki mg448503@students.mimuw.edu.pl"]

[dependencies]
ggez = { version = "0.9.3", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "my_project"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "player"
path = "src/main.rs"