[package]
name = "projekt"
version = "0.1.0"
edition = "2021"
default-run = "local"

authors = ["Marcin Giembicki mg448503@students.mimuw.edu.pl"]

[dependencies]
ggez = { version = "0.9.3"}

clap = { version = "4.0", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "projekt"
path = "src/lib.rs"

[[bin]]
name = "local"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "player"
path = "src/bin/player.rs"